--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "parcel-bundler": "^1.6.1"
+    "parcel-bundler": "^1.6.1",
+    "jest": "^22.1.4"
   }
 }
